# orthogonalization

./: .gitignore  README.md  custom_config.yml  pyproject.toml
orthogonalization/scenes/: gram_schmidt_2d.py  gram_schmidt_2d_span.py  gram_schmidt_2d_span_3d.py  gram_schmidt_3d_span_3d.py
orthogonalization/utils/: __init__.py  righ_angle.py
