[tool.poetry]
name = "orthogonalization"
version = "0.1.0"
description = "Educational repo oriented to illustrating orthogonalization vis Gram-Schmidt"
authors = ["Iñaki Rabanillo <lanza241@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
manimgl = "^1.7.1"
numpy = "1.24"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
pyrr = "^0.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
